--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -20,9 +20,12 @@
 
 .logo {
 }
+.search,
+.search-result {
+    width: 361px;
+}
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     padding-left: 16px;
     display: flex;
@@ -55,6 +58,13 @@
         border-color: rgba(22, 24, 35, 0.2);
     }
 }
+.search-title {
+    color: rgba(22, 24, 35, 0.5);
+    font-weight: 600;
+    font-size: 1.4rem;
+    padding: 5px 12px;
+}
+
 .clear,
 .loading {
     position: absolute;
